apps/production/unifi-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app.kubernetes.io/instance: unifi-controller
    app.kubernetes.io/name: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: unifi-controller
      app.kubernetes.io/name: unifi-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: unifi-controller
        app.kubernetes.io/name: unifi-controller
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: unifi-controller
          image: ghcr.io/goofball222/unifi:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: device-comm
              containerPort: 8080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: default-console
              containerPort: 8443
              protocol: TCP
            - name: secure-redirect
              containerPort: 8843
              protocol: TCP
            - name: http-redirect
              containerPort: 8880
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: unifi-disc
              containerPort: 10001
              protocol: UDP
            - name: unifi-disc-l2
              containerPort: 1900
              protocol: UDP
          env: []
          resources:
            requests:
              cpu: "150m"
              memory: "1024Mi"
            limits:
              cpu: "512m"
              memory: "2048Mi"
          volumeMounts:
            - name: unifi-data
              mountPath: /config
            - name: tmp-dir
              mountPath: /tmp
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-controller-data
        - name: tmp-dir
          emptyDir: {}
