apps/production/unifi-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app.kubernetes.io/instance: unifi-controller
    app.kubernetes.io/name: unifi-controller
spec:
  ports:
    - name: device-comm
      port: 8080
      protocol: TCP
    - name: stun
      port: 3478
      protocol: UDP
    - name: default-console
      port: 8443
      protocol: TCP
    - name: secure-redirect
      port: 8843
      protocol: TCP
    - name: http-redirect
      port: 8880
      protocol: TCP
    - name: speedtest
      port: 6789
      protocol: TCP
    - name: unifi-disc
      port: 10001
      protocol: UDP
    - name: unifi-disc-l2
      port: 1900
      protocol: UDP
  selector:
    app.kubernetes.io/instance: unifi-controller
    app.kubernetes.io/name: unifi-controller
