apps/production/unifi-controller/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ingress-route
  namespace: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.local.siemons-it.nl`)
      kind: Rule
      services:
        - name: unifi-controller
          port: 8443
          scheme: https
          serversTransport: unifi-ingress-transport
